--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <h1>COP4331 Summer 2021 Group 20</h1>
     <p>Nathan is the best - Nathan</p>
     <p style="font-size: 50px;">This is a temp landing page</p>
+    <p>THis is some random text for deomonstration purposes and spelling is not something im good at yay</p>
   </body>
 </html>
