Link to register page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <p>Nathan is the best - Nathan</p>
     <p style="font-size: 50px;">This is a temp landing page</p>
     <p>THis is some random text for deomonstration purposes and spelling is not something im good at yay</p>
+
+    <a href="register.html">Register</a>
   </body>
 </html>
