--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
-  <head> </head>
+  <head> 
+    <title>Home | ContactManager</title>
+  </head>
   <body>
     <h1>COP4331 Summer 2021 Group 20</h1>
     <p>Nathan is the best - Nathan</p>
