--- a/register.html
+++ b/register.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Sign Up | ContactManager</title>
+    </head>
+    
     <body>
-        <h1>Hello World!</h1>
+        <h1>test</h1>
+        <p>My first paragraph</p>
     </body>
 </html>
