--- a/register.html
+++ b/register.html
@@ -4,8 +4,8 @@
         <title>Sign Up | ContactManager</title>
     </head>
     
-    <body>
-        <h1>test</h1>
-        <p>My first paragraph</p>
+    <body style = "background-color: rgb(34, 39, 39);">
+        <h1 style = "text-align: center; font-family:sans-serif;">Sign Up</h1>
+        <p style = "font-family: sans-serif;">My first paragraph</p>
     </body>
 </html>
