--- a/register.html
+++ b/register.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
+        <meta charset = "UTF-8">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
         <title>Sign Up | ContactManager</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     
     <body style = "background-color: rgb(34, 39, 39);">
