Finished login page for frontend

--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,81 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Manager Group 20</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+    <section class="login-section">
+        <div class="container"
+            <div class="login">
+                <h2>Group 20 Login</h2>
+
+                <form action="">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username">
+
+                    <label for="password">Password:</label>
+                    <input type="text" id="password" name="password">
+
+                    <input type="submit" class="login-cta" value="Login">
+                    <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
+                </form>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <html>
 <head>
     <title>Cards Login DEMO</title>
     <script type="text/javascript" src="js/code.js"></script>
@@ -40,4 +117,4 @@
     </div>
     
 </body>
-</html>
+</html> -->
