--- a/html/index.html
+++ b/html/index.html
@@ -8,21 +8,19 @@
 </head>
 <body>
     <section class="login-section">
-        <div class="container"
-            <div class="login">
-                <h2>Group 20 Login</h2>
+        <div class="login">
+            <h2>Group 20 Login</h2>
 
-                <form action="">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username">
+            <form action="">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username">
 
-                    <label for="password">Password:</label>
-                    <input type="text" id="password" name="password">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password">
 
-                    <input type="submit" class="login-cta" value="Login">
-                    <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
-                </form>
-            </div>
+                <input type="submit" class="login-cta" value="Login">
+                <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
+            </form>
         </div>
     </section>
 </body>
