--- a/html/register.html
+++ b/html/register.html
@@ -22,7 +22,7 @@
 				<input type="email" id="email" name="email">
 
 				<label for="number">Phone Number:</label>
-				<input type="number" id="number" name="number">
+				<input type="text" id="number" name="number">
 				
 				<label for="username">Username:</label>
 				<input type="text" id="username" name="username">
