--- a/contacts.html
+++ b/contacts.html
@@ -12,9 +12,7 @@
             <a class="logo" href="#">Contact<span>Manager</span></a>    
 
             <nav>
-                <ul>
-                    <a class="log-out" href="index.html">Log out</a>    
-                </ul>
+                <a class="log-out" href="index.html">Log out</a>    
             </nav>
         </div>
     </div>
@@ -22,11 +20,30 @@
     <section class="contacts">
         <div class="container">
             <h1>Contacts</h1>
-            <a href="#" class="add-contact">
+            <a href="#" id="button" class="add-contact">
                 <img src="assets/plus.svg" alt="Add Contact">
             </a>
             </div>
         </div>
     </section>
+
+    <div class="bg-modal">
+        <div class="modal-content">
+            <div class="close">+</div>
+            <svg width="100" height="100">
+                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="2" fill="white" />
+            </svg>
+
+            <form action="">
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Last Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Phone Number">
+                <a href="" class="button">Done</a>
+            </form>
+        </div>
+
+    </div>
+    <script src="js/contacts.js"></script>
 </body>
 </html>
