--- a/contacts.html
+++ b/contacts.html
@@ -30,17 +30,19 @@
     <div class="bg-modal">
         <div class="modal-content">
             <div class="close">+</div>
+            
             <svg width="100" height="100">
                 <circle cx="50" cy="50" r="40" stroke="black" stroke-width="2" fill="white" />
             </svg>
 
             <form action="">
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
+                <input type="text" id="firstName" placeholder="First Name">
+                <input type="text" id="lastName" placeholder="Last Name">
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Phone Number">
                 <a href="" class="button">Done</a>
             </form>
+            <h1 class="initials" id="fl"></h1>
         </div>
 
     </div>
