--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
     <section class="contacts">
         <div class="container">
             <h1>Contacts</h1>
-            <a href="#" id="button" class="add-contact">
+            <a href="#" id="plusbutton" class="add-contact">
                 <img src="assets/plus.svg" alt="Add Contact">
             </a>
             </div>
@@ -40,7 +40,7 @@
                 <input type="text" id="lastName" placeholder="Last Name">
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Phone Number">
-                <a href="" class="button">Done</a>
+                <a href="" class="donebutton">Done</a>
             </form>
             <h1 class="initials" id="fl"></h1>
         </div>
