--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Register as Contact Manager</title>
+	<title>Sign up | ContactManager</title>
 	<link rel="stylesheet" href="css/reg.css">
 </head>
 <body>
