--- a/index.html
+++ b/index.html
@@ -3,24 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title of webpage -->
     <title>Contact Manager Group 20</title>
+
+    <!-- Linking javascript -->
     <script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
+
+    <!-- Linking css -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <!-- Navigation bar -->
+    <div class="navbar">
+        <div class="container">
+            <a class="logo" href="#">Contact<span>Manager</span></a>    
+        </div>
+    </div>
+
+    
     <section class="login-section">
         <div class="login">
             <h2>Group 20 Login</h2>
 
+            <!-- Login credentials -->
             <form action="">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username">
 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password">
+
                 <button type="button" id="login" class="login-cta" onclick="doLogin();">Login</button>
+
+                <!-- Space for error msg -->
                 <span id="loginResult"></span>
+
+                <!-- Link to register page -->
                 <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
             </form>
         </div>
