Additional changes to register

--- a/register.html
+++ b/register.html
@@ -52,6 +52,9 @@
 
 				<input type="submit" class="register-cta" value="Register">
 
+				<!-- Space for error msg -->
+				<span id="registerResult"></span>
+
 				<!-- Link to login page -->
 				<p><a href="index.html">Already have an account? Click here to login!</a></p>
 			</form>
