--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contacts | ContactManager</title>
 	<link rel="stylesheet" href="css/contacts.css">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <div class="navbar">
@@ -20,11 +21,23 @@
     <section class="contacts">
         <div class="container">
             <h1>Contacts</h1>
-            <a href="#" id="plusbutton" class="add-contact">
+            <a href="#" id="plusButton" class="add-contact">
                 <img src="assets/plus.svg" alt="Add Contact">
             </a>
             </div>
         </div>
+
+        <table class="contacts-table">
+            <thead class="contacts-head">
+                <tr>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody class="contacts-body"></tbody>
+        </table>
     </section>
 
     <div class="bg-modal">
@@ -32,15 +45,15 @@
             <div class="close">+</div>
             
             <svg width="100" height="100">
-                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="2" fill="white" />
+                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="2" fill="none" />
             </svg>
 
             <form action="">
                 <input type="text" id="firstName" placeholder="First Name">
                 <input type="text" id="lastName" placeholder="Last Name">
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Phone Number">
-                <a href="" class="donebutton">Done</a>
+                <input type="text" id="email" placeholder="Email">
+                <input type="text" id="phone" placeholder="Phone Number">
+                <button class="done-button" type="submit">Done</button>
             </form>
             <h1 class="initials" id="fl"></h1>
         </div>
