Confirm delete contact popup

--- a/contacts.html
+++ b/contacts.html
@@ -57,8 +57,14 @@
             </form>
             <h1 class="initials" id="fl"></h1>
         </div>
-
     </div>
+
+    <div class="bg-modal-confirm-delete">
+        <div class="confirm-delete-content">
+            <div class="confirm-delete-close">+</div>
+            <h1>Are you sure?</h1>
+            <button class="confirm-button">Delete Contact</button>
+        </div>
     <script src="js/contacts.js"></script>
 </body>
 </html>
