Renamed title fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title of webpage -->
-    <title>Contact Manager Group 20</title>
+    <title>Home | ContactManager</title>
 
     <!-- Linking javascript -->
     <script type="text/javascript" src="js/md5.js"></script>
