--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Title of webpage -->
-	<title>Register as Contact Manager</title>
+	<title>Sign up | ContactManager</title>
 	
 
 	<!-- Linking javascript -->
