--- a/register.html
+++ b/register.html
@@ -43,9 +43,9 @@
 				<input type="password" id="password" name="password">
 
 				<label for="passwordRetype">Password Confirmation:</label>
-				<input type="passwordRetype" id="passwordRetype" name="passwordRetype">
+				<input type="password" id="passwordRetype" name="passwordRetype">
 
-				<input type="submit" class="register-cta" value="Register">
+				<button type="button" id="register" class="register-cta" onclick="doRegister();">Register</button>
 
 				<!-- Space for error msg -->
 				<span id="registerResult"></span>
