Adjust several parts of html and js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Group 20 Login</h2>
 
             <!-- Login credentials -->
-            <form action="">
+            <div class="form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username">
 
@@ -38,11 +38,11 @@
                 <button type="button" id="login" class="login-cta" onclick="doLogin();">Login</button>
 
                 <!-- Space for error msg -->
-                <span id="loginResult"></span>
+                <div id="loginResult"></div>
 
                 <!-- Link to register page -->
                 <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
-            </form>
+            </div>
         </div>
     </section>
 </body>
