--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
 			<h2>Group 20 Register</h2>
 
 			<!-- Register credentials -->
-			<form action="">
+			<div class="form">
 				<label for="firstname">First Name:</label>
 				<input type="text" id="firstname" name="firstname">
 
@@ -48,11 +48,11 @@
 				<button type="button" id="register" class="register-cta" onclick="doRegister();">Register</button>
 
 				<!-- Space for error msg -->
-				<span id="registerResult"></span>
+				<div id="registerResult"></div>
 
 				<!-- Link to login page -->
 				<p><a href="index.html">Already have an account? Click here to login!</a></p>
-			</form>
+			</div>
 		</div>
     </section>
 </body>
