Search-bar placeholder

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
 	<title>Contacts | ContactManager</title>
 	<link rel="stylesheet" href="css/contacts.css">
     <link rel="shortcut icon" href="#">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
@@ -21,6 +22,12 @@
     <section class="contacts">
         <div class="container">
             <h1>Contacts</h1>
+            <div class="search">
+                <input class="search-bar" type="text" spellcheck="false" placeholder="&#61442; Search"/>
+                <button class="search-button" type="submit">Go</button>
+                
+            </div>
+            
             <a href="#" id="plusButton" class="add-contact">
                 <img src="assets/plus.svg" alt="Add Contact">
             </a>
