--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
             <a class="logo" href="#">Contact<span>Manager</span></a>    
 
             <nav>
-                <a class="log-out" href="index.html">Log out</a>    
+                <a class="log-out" onclick="doLogout();">Log out</a>    
             </nav>
         </div>
     </div>
@@ -73,6 +73,8 @@
             <h1>Are you sure?</h1>
             <button class="confirm-button">Delete Contact</button>
         </div>
+    </div>
+    <script src="js/code.js"></script>
     <script src="js/contacts.js"></script>
 </body>
 </html>
