Fixed parts of mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     
-    <section class="login-section">
+    <div class="login-section">
         <div class="login">
             <h2>Group 20 Login</h2>
 
@@ -44,7 +44,7 @@
                 <p><a href="register.html">Don't have a login? Click here to sign up!</a></p>
             </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
 
