--- a/contacts.html
+++ b/contacts.html
@@ -67,6 +67,25 @@
         </div>
     </div>
 
+    <div class="edit-bg-modal">
+        <div class="edit-modal-content">
+            <div class="edit-close">+</div>
+            
+            <svg width="100" height="100">
+                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="2" fill="none" />
+            </svg>
+
+            <form action="">
+                <input type="text" id="edit-firstName" placeholder="First Name">
+                <input type="text" id="edit-lastName" placeholder="Last Name">
+                <input type="text" id="edit-email" placeholder="Email">
+                <input type="text" id="edit-phone" placeholder="Phone Number">
+                <button class="edit-done-button" type="submit">Done</button>
+            </form>
+            <h1 class="edit-initials" id="edit-fl"></h1>
+        </div>
+    </div>
+
     <div class="bg-modal-confirm-delete">
         <div class="confirm-delete-content">
             <div class="confirm-delete-close">+</div>
