got rid of type="submit" on buttons

--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
             <h1>Contacts</h1>
             <div class="search">
                 <input class="search-bar" type="text" spellcheck="false" placeholder="&#61442; Search"/>
-                <button class="search-button" type="submit">Go</button>
+                <button class="search-button">Go</button>
                 
             </div>
             
@@ -61,7 +61,7 @@
                 <input type="text" id="lastName" placeholder="Last Name">
                 <input type="text" id="email" placeholder="Email">
                 <input type="text" id="phone" placeholder="Phone Number">
-                <button class="done-button" type="submit">Done</button>
+                <button class="done-button">Done</button>
             </form>
             <h1 class="initials" id="fl"></h1>
         </div>
@@ -80,7 +80,7 @@
                 <input type="text" id="edit-lastName" placeholder="Last Name">
                 <input type="text" id="edit-email" placeholder="Email">
                 <input type="text" id="edit-phone" placeholder="Phone Number">
-                <button class="edit-done-button" type="submit">Done</button>
+                <button class="edit-done-button">Done</button>
             </form>
             <h1 class="edit-initials" id="edit-fl"></h1>
         </div>
