--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="#">Contact<span>Manager</span></a>    
+            <a class="logo" href="#">Contact<span>Factory</span></a>    
 
             <nav>
                 <a class="log-out" onclick="doLogout();">Log out</a>    
