Added new colors to login/reg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title of webpage -->
-    <title>Home | ContactManager</title>
+    <title>Home | ContactFactory</title>
 
     <!-- Linking javascript -->
     <script type="text/javascript" src="js/md5.js"></script>
@@ -18,14 +18,14 @@
     <!-- Navigation bar -->
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="#">Contact<span>Manager</span></a>    
+            <a class="logo" href="#">Contact<span>Factory</span></a>    
         </div>
     </div>
 
     
     <div class="login-section">
         <div class="login">
-            <h2>Group 20 Login</h2>
+            <h2>Factory Login</h2>
 
             <!-- Login credentials -->
             <div class="form">
