--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Title of webpage -->
-	<title>Sign up | ContactManager</title>
+	<title>Sign up | ContactFactory</title>
 	
 
 	<!-- Linking javascript -->
@@ -20,13 +20,13 @@
 	<!-- Navigation bar -->
 	<div class="navbar">
         <div class="container">
-            <a class="logo" href="#">Contact<span>Manager</span></a>    
+            <a class="logo" href="#">Contact<span>Factory</span></a>    
         </div>
     </div>
 
 	<section class="register-section">       
 		<div class="register">
-			<h2>Group 20 Register</h2>
+			<h2>Factory Registration</h2>
 
 			<!-- Register credentials -->
 			<div class="form">
