New look for contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/contacts.css">
     <link rel="shortcut icon" href="#">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
@@ -23,7 +25,7 @@
         <div class="container">
             <h1>Contacts</h1>
             <div class="search">
-                <input class="search-bar" type="text" spellcheck="false" placeholder="&#61442; Search"/>
+                <input class="search-bar" type="text" spellcheck="false" placeholder="&#61442 Search"/>
                 <button class="search-button">Go</button>
                 
             </div>
@@ -41,6 +43,7 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Phone</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
