--- a/contacts.html
+++ b/contacts.html
@@ -90,6 +90,8 @@
                 <input type="text" id="edit-lastName" placeholder="Last Name">
                 <input type="text" id="edit-email" placeholder="Email">
                 <input type="text" id="edit-phone" placeholder="Phone Number">
+                <textarea type="text" id="edit-description" placeholder="Description" 
+                rows="5" cols="35" wrap="soft" style="resize: none"></textarea>
                 <button class="edit-done-button">Done</button>
             </form>
         </div>
@@ -110,6 +112,7 @@
             <button class="confirm-button">Delete Contact</button>
         </div>
     </div>
+    
     <script src="js/code.js"></script>
     <script src="js/contacts.js"></script>
 </body>
