Implemented rest of API calls

--- a/contacts.html
+++ b/contacts.html
@@ -70,6 +70,7 @@
                 <textarea type="text" id="description" placeholder="Description" 
                 rows="5" cols="35" wrap="soft" style="resize: none"></textarea>
                 <button class="done-button">Done</button>
+                <!-- TODO future, put error box here or something idk man -->
             </form>
         </div>
     </div>
@@ -93,6 +94,7 @@
                 <textarea type="text" id="edit-description" placeholder="Description" 
                 rows="5" cols="35" wrap="soft" style="resize: none"></textarea>
                 <button class="edit-done-button">Done</button>
+                <!-- TODO future, put error box here or something idk man -->
             </form>
         </div>
     </div>
@@ -110,6 +112,7 @@
             <div class="confirm-delete-close">+</div>
             <h1>Are you sure?</h1>
             <button class="confirm-button">Delete Contact</button>
+            <!-- TODO future, put error box here or something idk man -->
         </div>
     </div>
     
