--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,9 @@
 
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
+    <!-- Icons for Edit & Delete -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -26,8 +29,8 @@
         <div class="container">
             <h1>Contacts</h1>
             <div class="search">
-                <input class="search-bar" type="text" spellcheck="false" placeholder="&#61442 Search"/>
-                <button class="search-button">Go</button>
+                <input class="search-bar" type="text" spellcheck="false" placeholder="Search..."/>
+                <button class="search-button"><i class="fa fa-search"></i></button>
             </div>
             
             <a href="#" id="plusButton" class="add-contact">
