Added favicon to index/register page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- Title of webpage -->
     <title>Home | ContactFactory</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
     <!-- Linking javascript -->
     <script type="text/javascript" src="js/md5.js"></script>
