--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
 
 	<!-- Title of webpage -->
 	<title>Sign up | ContactFactory</title>
+	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 	
 
 	<!-- Linking javascript -->
