--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <!-- Login credentials -->
             <div class="form">
-                <label for="username">Username:</label>
+                <label for="username" class="username">Username:</label>
                 <input type="text" id="username" name="username">
 
                 <label for="password">Password:</label>
