clicking on the logo now does something

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation bar -->
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="#">Contact<span>Factory</span></a>    
+            <a class="logo" href="index.html">Contact<span>Factory</span></a>    
         </div>
     </div>
 
