--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="#">Contact<span>Factory</span></a>    
+            <a class="logo" href="contacts.html">Contact<span>Factory</span></a>    
             <nav>
                 <a class="log-out" onclick="doLogout();">Log Out</a>    
             </nav>
